--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "654f770a-2bf3-4433-95e4-e448c93de5d1"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
